--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
         "class-transformer": "^0.2.3",
         "class-validator": "^0.10.2",
         "dotenv": "^8.2.0",
+        "image-thumbnail": "^1.0.7",
         "mysql": "^2.17.1",
         "passport": "^0.4.0",
         "passport-jwt": "^4.0.0",
@@ -51,7 +52,7 @@
         "@types/passport-jwt": "^3.0.2",
         "@types/passport-local": "^1.0.33",
         "@types/supertest": "2.0.7",
-        "jest": "24.7.1",
+        "jest": "^25.1.0",
         "prettier": "1.17.0",
         "supertest": "4.0.2",
         "ts-jest": "24.0.2",
