--- a/package.json
+++ b/package.json
@@ -1,83 +1,80 @@
 {
-    "name": "back",
-    "version": "0.0.1",
-    "description": "",
-    "author": "",
-    "license": "MIT",
-    "scripts": {
-        "start": "node dist/server",
-        "webpack": "webpack --config webpack.config.js",
-        "build": "rimraf dist && tsc -p tsconfig.build.json",
-        "format": "prettier --write \"src/**/*.ts\"",
-        "start:dev": "tsc-watch -p tsconfig.build.json --onSuccess \"node dist/main.js\"",
-        "start:debug": "tsc-watch -p tsconfig.build.json --onSuccess \"node --inspect-brk dist/main.js\"",
-        "start:prod": "node dist/main.js",
-        "lint": "tslint -p tsconfig.json -c tslint.json",
-        "test": "jest",
-        "test:watch": "jest --watch",
-        "test:cov": "jest --coverage",
-        "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-        "test:e2e": "jest --config ./test/jest-e2e.json",
-        "migrate:generate": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:generate -n ",
-        "migrate:run": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:run",
-        "migrate:revert": "./node_modules/.bin/ts-node ./node_modules/.bin/typeorm migration:revert"
+  "name": "project-name",
+  "version": "0.0.1",
+  "description": "",
+  "author": "",
+  "private": true,
+  "license": "UNLICENSED",
+  "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "nest build",
+    "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
+    "start": "nest start",
+    "start:dev": "nest start --watch",
+    "start:debug": "nest start --debug --watch",
+    "start:prod": "node dist/main",
+    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:cov": "jest --coverage",
+    "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
+    "test:e2e": "jest --config ./test/jest-e2e.json"
+  },
+  "dependencies": {
+    "@nestjs/common": "^7.0.0",
+    "@nestjs/core": "^7.0.0",
+    "@nestjs/jwt": "^7.2.0",
+    "@nestjs/passport": "^7.1.5",
+    "@nestjs/platform-express": "^7.0.0",
+    "@nestjs/typeorm": "^7.1.5",
+    "class-transformer": "^0.4.0",
+    "class-validator": "^0.13.1",
+    "mysql": "^2.18.1",
+    "mysql2": "^2.2.5",
+    "passport": "^0.4.1",
+    "passport-jwt": "^4.0.0",
+    "passport-local": "^1.0.0",
+    "reflect-metadata": "^0.1.13",
+    "rimraf": "^3.0.2",
+    "rxjs": "^6.5.4",
+    "typeorm": "^0.2.34"
+  },
+  "devDependencies": {
+    "@nestjs/cli": "^7.0.0",
+    "@nestjs/schematics": "^7.0.0",
+    "@nestjs/testing": "^7.0.0",
+    "@types/express": "^4.17.3",
+    "@types/jest": "25.1.4",
+    "@types/node": "^13.9.1",
+    "@types/passport-jwt": "^3.0.5",
+    "@types/passport-local": "^1.0.33",
+    "@types/supertest": "^2.0.8",
+    "@typescript-eslint/eslint-plugin": "^2.23.0",
+    "@typescript-eslint/parser": "^2.23.0",
+    "eslint": "^6.8.0",
+    "eslint-config-prettier": "^6.10.0",
+    "eslint-plugin-import": "^2.20.1",
+    "jest": "^25.1.0",
+    "prettier": "^1.19.1",
+    "supertest": "^4.0.2",
+    "ts-jest": "25.2.1",
+    "ts-loader": "^6.2.1",
+    "ts-node": "^8.6.2",
+    "tsconfig-paths": "^3.9.0",
+    "typescript": "^3.7.4"
+  },
+  "jest": {
+    "moduleFileExtensions": [
+      "js",
+      "json",
+      "ts"
+    ],
+    "rootDir": "src",
+    "testRegex": ".spec.ts$",
+    "transform": {
+      "^.+\\.(t|j)s$": "ts-jest"
     },
-    "dependencies": {
-        "@nestjs/common": "^6.8.4",
-        "@nestjs/core": "^6.8.4",
-        "@nestjs/jwt": "^6.1.1",
-        "@nestjs/passport": "^6.1.0",
-        "@nestjs/platform-express": "^6.8.4",
-        "@nestjs/typeorm": "^6.2.0",
-        "bcrypt": "^3.0.6",
-        "class-transformer": "^0.2.3",
-        "class-validator": "^0.10.2",
-        "dotenv": "^8.2.0",
-        "image-thumbnail": "^1.0.7",
-        "mysql": "^2.17.1",
-        "passport": "^0.4.0",
-        "passport-jwt": "^4.0.0",
-        "passport-local": "^1.0.0",
-        "reflect-metadata": "^0.1.12",
-        "rimraf": "^2.6.2",
-        "rxjs": "^6.3.3",
-        "typeorm": "^0.2.20"
-    },
-    "devDependencies": {
-        "@nestjs/testing": "^6.8.4",
-        "@types/dotenv": "^6.1.1",
-        "@types/express": "4.16.1",
-        "@types/jest": "24.0.11",
-        "@types/node": "11.13.4",
-        "@types/passport-jwt": "^3.0.2",
-        "@types/passport-local": "^1.0.33",
-        "@types/supertest": "2.0.7",
-        "jest": "^25.1.0",
-        "prettier": "1.17.0",
-        "supertest": "4.0.2",
-        "ts-jest": "24.0.2",
-        "ts-loader": "^6.2.1",
-        "ts-node": "8.1.0",
-        "tsc-watch": "2.2.1",
-        "tsconfig-paths": "3.8.0",
-        "tslint": "5.16.0",
-        "typescript": "3.4.3",
-        "webpack": "^4.41.2",
-        "webpack-cli": "^3.3.9",
-        "webpack-node-externals": "^1.7.2"
-    },
-    "jest": {
-        "moduleFileExtensions": [
-            "js",
-            "json",
-            "ts"
-        ],
-        "rootDir": "src",
-        "testRegex": ".spec.ts$",
-        "transform": {
-            "^.+\\.(t|j)s$": "ts-jest"
-        },
-        "coverageDirectory": "../coverage",
-        "testEnvironment": "node"
-    }
+    "coverageDirectory": "../coverage",
+    "testEnvironment": "node"
+  }
 }
