--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^6.5.4",
+    "sharp": "^0.28.3",
     "typeorm": "^0.2.34"
   },
   "devDependencies": {
